syntax = "proto3";

package pb;

import "customer.proto";

option go_package = "barbershop/src/pb";


message CreateCustomerRequest{
    string name = 1;
    string email = 2;
    string phone = 3;
    int32 gender = 4;
    string password = 5;
}

message CreateCustomerResponse {
    Customer customer = 1;
}